# delivery

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.cfg
.github/workflows/: make.yml
server/: .env  .env.dev  .env_example  Dockerfile  Makefile  docker-compose.yml  load_data.json  load_partners.py  manage.py  requirements.txt  tutorial
server/api/: admin.py  converters.py  models.py  permissions.py  tests.py  urls.py
server/api/migrations/: 0001_initial.py
server/api/serializers/: partner.py
server/api/views/: partner.py
server/delivery/: asgi.py  settings.py  urls.py  wsgi.py
